<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.janilla</groupId>
	<artifactId>janilla-conduit</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<dependencies>
		<dependency>
			<groupId>com.janilla</groupId>
			<artifactId>janilla</artifactId>
			<version>6.0.0</version>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.janilla</groupId>
				<artifactId>janilla-conduit-backend</artifactId>
				<version>1.0.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>com.janilla</groupId>
				<artifactId>janilla-conduit-frontend</artifactId>
				<version>1.0.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>com.janilla</groupId>
				<artifactId>janilla-conduit-fullstack</artifactId>
				<version>1.0.0-SNAPSHOT</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<modules>
		<module>backend</module>
		<module>frontend</module>
		<module>fullstack</module>
		<module>testing</module>
	</modules>
	<properties>
		<maven.compiler.enablePreview>true</maven.compiler.enablePreview>
		<maven.compiler.parameters>true</maven.compiler.parameters>
		<maven.compiler.release>24</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<sourceDirectory>./source</sourceDirectory>
		<resources>
			<resource>
				<directory>source</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<configuration>
					<mainClass>com.janilla.conduit.fullstack.ConduitFullstackApp</mainClass>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>3.5.0</version>
					<executions>
						<execution>
							<goals>
								<goal>exec</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<name>Janilla Conduit</name>
	<description>A fully fledged fullstack application built with Janilla
		including CRUD operations, authentication, routing, pagination, and more</description>
	<url>https://github.com/diego-schivo/janilla-conduit</url>
	<licenses>
		<license>
			<name>MIT</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Diego Schivo</name>
			<email>diego.schivo@janilla.com</email>
			<organization>Janilla</organization>
			<organizationUrl>https://janilla.com</organizationUrl>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:git://github.com/diego-schivo/janilla-conduit.git</connection>
		<developerConnection>
			scm:git:ssh://git@github.com/diego-schivo/janilla-conduit.git</developerConnection>
		<url>https://github.com/diego-schivo/janilla-conduit</url>
		<tag>HEAD</tag>
	</scm>
</project>
